# copilot-sdk

.github/workflows/: codeql-ui-insists-committing-via-ui.yml  copilot-setup-steps.yml  java-publish-maven.yml  publish.yml
docs/troubleshooting/: compatibility.md
dotnet/: Directory.Packages.props
dotnet/src/: Client.cs  Session.cs  SessionFsProvider.cs  Types.cs
dotnet/test/: GitHub.Copilot.SDK.Test.csproj
dotnet/test/E2E/: InMemorySessionFsSqliteHandler.cs  ModeHandlersE2ETests.cs  RpcMcpLifecycleE2ETests.cs  RpcServerMiscE2ETests.cs  RpcServerPluginsE2ETests.cs  RpcServerRemoteControlE2ETests.cs  RpcSessionStateExtrasE2ETests.cs  RpcShellUserRequestedE2ETests.cs  RpcUiEphemeralQueryE2ETests.cs  SessionE2ETests.cs  SessionFsE2ETests.cs  SessionFsSqliteE2ETests.cs
dotnet/test/Unit/: SerializationTests.cs
go/: client.go  client_test.go  session.go  session_fs_provider.go  types.go
java/: .lastmerge  README.md  jbang-example.java  pom.xml
nodejs/: README.md  package-lock.json  package.json  tsconfig.json
nodejs/examples/: basic-example.ts
nodejs/samples/: package-lock.json
nodejs/src/: client.ts  extension.ts  index.ts  session.ts  sessionFsProvider.ts  types.ts
nodejs/test/: cjs-compat.test.ts  client.test.ts  extension.test.ts  session_fs_adapter.test.ts  shared-codegen.test.ts
python/copilot/: __init__.py  client.py  session.py  session_fs_provider.py
python/e2e/: conftest.py  test_mode_handlers_e2e.py  test_rpc_mcp_lifecycle_e2e.py  test_rpc_server_misc_e2e.py  test_rpc_server_plugins_e2e.py  test_rpc_server_remote_control_e2e.py  test_rpc_session_state_e2e.py  test_rpc_session_state_extras_e2e.py  test_rpc_shell_user_requested_e2e.py  test_rpc_ui_ephemeral_query_e2e.py  test_session_e2e.py  test_session_fs_e2e.py  test_session_fs_sqlite_e2e.py
rust/: Cargo.toml
rust/src/: lib.rs  session.rs  session_fs.rs  session_fs_dispatch.rs  types.rs
rust/tests/: e2e.rs  session_test.rs
rust/tests/e2e/: rpc_mcp_lifecycle.rs  rpc_server_misc.rs  rpc_server_plugins.rs  rpc_server_remote_control.rs  rpc_session_state_extras.rs  rpc_shell_user_requested.rs  rpc_ui_ephemeral_query.rs  session_fs.rs  session_fs_sqlite.rs
scripts/codegen/: utils.ts
test/harness/: package-lock.json  package.json
(+104 files in other folders)
